<?xml version="1.0" encoding="utf-8"?>
<com.lmn.widget.CustomTitleBar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    app:left_btn_visible="true"
    app:title_text="修改密码"
    app:title_visible="true">

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_below="@+id/logo"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="13dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:src="@drawable/ic_password_flag" />

            <EditText
                android:id="@+id/et_oldpsw"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/old_psw"
                android:maxLength="11"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/color_999999"
                android:textColorHint="@color/color_999999"
                android:textSize="14dp"
                android:inputType="textPassword"
                />

            <ImageView
                android:id="@+id/clean_oldpsw"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:scaleType="centerInside"
                android:src="@drawable/ic_clear"
                android:visibility="visible" />
            <ImageView
                android:id="@+id/iv_show_oldpwd"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:scaleType="centerInside"
                android:src="@drawable/pass_gone" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_eeeeee" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="13dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:src="@drawable/ic_password_flag" />

            <EditText
                android:id="@+id/et_newpsw"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/new_psw"
                android:inputType="textPassword"
                android:maxLength="30"
                android:singleLine="true"
                android:text=""
                android:textColor="@color/color_999999"
                android:textColorHint="@color/color_999999"
                android:textSize="14dp" />

            <ImageView
                android:id="@+id/clean_newpsw"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:scaleType="centerInside"
                android:src="@drawable/ic_clear"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/iv_show_newpwd"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:scaleType="centerInside"
                android:src="@drawable/pass_gone" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_eeeeee" />

        <Button
            android:id="@+id/btn_sure"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_btn_login_selected"
            android:text="@string/btn_sure"
            android:textColor="@color/color_ffffff"
            android:textSize="18dp" />

    </LinearLayout>
</com.lmn.widget.CustomTitleBar>